--- a/index.html
+++ b/index.html
@@ -3152,12 +3152,15 @@ vertical-align: -.125em;
 <section id="methods" class="level2">
 <h2 class="anchored" data-anchor-id="methods">Methods</h2>
 </section>
-<section id="analysis-and-results" class="level2 unnumbered">
+<section id="analysis-and-results" class="level2">
+<h2 class="anchored" data-anchor-id="analysis-and-results">Analysis and Results</h2>
+</section>
+<section id="references" class="level1 unnumbered">
 
 
 </section>
 
-<div id="quarto-appendix" class="default"><section class="quarto-appendix-contents" role="doc-bibliography" id="quarto-bibliography"><h2 class="anchored quarto-appendix-heading">Analysis and Results</h2><div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
+<div id="quarto-appendix" class="default"><section class="quarto-appendix-contents" role="doc-bibliography" id="quarto-bibliography"><h2 class="anchored quarto-appendix-heading">References</h2><div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
 <div id="ref-congReviewConvolutionalNeural2023" class="csl-entry" role="listitem">
 Cong, Shuang, and Yang Zhou. 2023. <span>“A Review of Convolutional Neural Network Architectures and Their Optimizations.”</span> <em>Artificial Intelligence Review</em> 56 (3): 1905–69. <a href="https://doi.org/10.1007/s10462-022-10213-5">https://doi.org/10.1007/s10462-022-10213-5</a>.
 </div>
